Bug 418343: sort form history autocomplete results alphabetically, r=sdwilsh